[package]
name = "anchor-cereal-derive"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Derive macros for anchor-cereal"
repository = "https://github.com/ameliatastic/anchor-cereal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.18"
syn = { version = "1.0.96", features = ["derive"] }

[lib]
proc-macro = true